tests/negative/test_expr_bin_bad_types.orb
fnc main() () {
    let (x:i32 1);
    let (a:c8 'a');
    + x a;
};